The Style Cleanup Commit
NOTE: I probably forgot a few things, oh well it will be fixed later
-Reorganized Sass/HTML Inline Styles to be much more sensible
--More rules are now defined as children of parent rules where possible
--Removed some older styling artifacts from an age of Bootstrap
--Organized style rules into sections
--Moved HTML Inline Styles to Component Stylesheets
--Removed extra HTML and Sass classes/IDs
-Also removed an unnecessary import :P
-All Image Assets are now WebP format for better size and delivery
--Corrected all asset paths to use the new file format extension

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,15 +2,15 @@
 	<section class="intro">
 		<div class="justify-content-center" style="padding-top:150px; padding-left:100px" id="hero-container">
 			<span class="hero-text">Software Engineer</span>
-			<div style="padding:50px;"> </div>
+			<div class="padding-div"> </div>
 			<span class="hero-text">Hardware Tinkerer</span>
-			<div style="padding:50px;"> </div>
+			<div class="padding-div"> </div>
 			<span class="hero-text">Power User</span>
-			<div style="padding:50px;"> </div>
+			<div class="padding-div"> </div>
 			<span class="hero-text">Tech Enthusiast</span>
 		</div>
 	</section>
-	<section class="projects" id="projects-section">
+	<section class="projects">
 		<h1 class="featured-header">Featured Projects</h1>
 		<!--This is why I wanted to rewrite the website with Angular-->
 		<div class="card-container">
