--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
 		<mat-sidenav #snav [mode]="'side'" [fixedInViewport]="true" opened class="snav">
 			<div class="profile">
 				<a routerLink="/main" routerLinkActive="active">
-					<img src="/assets/img/pfp_not_funny.jpg" alt="" class="pfp">
+					<img src="/assets/img/pfp_not_funny.webp" alt="" class="pfp">
 				</a>
 				<h1 class="navbar-brand">
 					<a routerLink="/main" routerLinkActive="active">Alex Westerman</a>
