--- a/src/app/resume/resume.component.scss
+++ b/src/app/resume/resume.component.scss
@@ -2,67 +2,59 @@
 	padding: 15px;
 	width: 100%;
 	display: flex;
+
+	.count-box-right {
+		margin-left: 80px;
+	}
+
+	mat-icon {
+		display: block;
+		font-size: 80px;
+		line-height: 60px;
+	}
+
+	span {
+		font-size: 48px;
+		line-height: 20px;
+		display: block;
+		font-weight: 700;
+	}
+
+	p {
+		padding: 15px 0 0 0;
+		font-size: 16px;
+	}
+
+	a {
+		font-weight: 600;
+		font-size: 18px;
+		transition: ease-in-out 0.3s;
+
+		&:visited {
+			color: #ffffff;
+		}
+	}
+
+	.counter-desc {
+		width: 250px;
+	}
 }
 
-.count-box-right {
-	margin-left: 80px;
-}
+div {
+	&.header-row {
+		padding-top: 25px;
+		width: 90%;
+		margin: auto;
+	}
 
-.count-box mat-icon {
-	display: block;
-	font-size: 80px;
-	line-height: 60px;
-}
+	&.resume-content {
+		width: 90%;
+		margin: auto;
 
-.count-box span {
-	font-size: 48px;
-	line-height: 20px;
-	display: block;
-	font-weight: 700;
-}
-
-.count-box p {
-	padding: 15px 0 0 0;
-	font-size: 16px;
-}
-
-.count-box a {
-	font-weight: 600;
-	font-size: 18px;
-	transition: ease-in-out 0.3s;
-}
-
-.counter-desc {
-	// padding-left: 65px;
-	width: 250px;
-}
-
-a:visited {
-	color: #ffffff;
-}
-
-.headerSpacer {
-	flex: 1 1 auto;
-}
-
-div.header-row {
-	padding-top: 25px;
-	width: 90%;
-	margin: auto;
-}
-
-div.resume-content {
-	width: 90%;
-	margin: auto;
-}
-
-div.resume-spacer {
-	height: 20px;
-	width: 100%;
-}
-
-div.resume-content h1 {
-	margin-top: 25px;
+		h1 {
+			margin-top: 25px;
+		}
+	}
 }
 
 mat-grid-tile {
