Asset Hotfixes/Cleanup
-Removed unused image assets
-Renamed assets for easier distinction in filename
-Added assets for Horizon Plus Project
-Updated Asset References as needed

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -24,7 +24,7 @@
 			have learned over the variety of experiences I have gone through!</p>
 	</div>
 	<div>
-		<img src="/assets/img/L1100085.webp" style="width:100%">
+		<img src="/assets/img/workspace.webp" style="width:100%">
 	</div>
 
 
