--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -2,7 +2,7 @@
 section.intro {
 	width: 100%;
 	height: 80vh;
-	background-image: url("../../assets/img/DSC_0011.webp");
+	background-image: url("../../assets/img/hero.webp");
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center;
