--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -57,7 +57,7 @@
 			</mat-grid-list>
 		</div>
 		<div class="more-projects-btn">
-			<button mat-raised-button class="more-projects-btn">More Projects</button>
+			<a routerLink="/projects" routerLinkActive="active" #outlet><button mat-raised-button class="more-projects-btn">More Projects</button></a>
 		</div>
 	</section>
 </main>
