Resume Migration to JSON Schemas
-Resume is now automated through JSON Schema
--Added New JSON schema for Resume Content
--Added relevant Typescript interfaces and component code
--Moved all relevant data to resume.json
-Added other schema scaffolds for other webpage portions.
-Updated Angular Dependencies where relevant

--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -1,35 +1,12 @@
 <section class="outline">
 	<div class="header-row">
 		<mat-grid-list cols="3" rowHeight="100px">
-			<mat-grid-tile>
+			<mat-grid-tile *ngFor="let item of highlights">
 				<div class="count-box">
-					<mat-icon class="headerIcon" fontIcon="nf-fa-book"></mat-icon>
+					<mat-icon class="headerIcon" fontIcon="{{item.icon}}"></mat-icon>
 					<div class="count-box-right">
-						<span class="counter">8+ years</span>
-						<p class="counter-desc"><strong>Experience</strong> in Computers, Programming, and Technology
-						</p>
-					</div>
-				</div>
-			</mat-grid-tile>
-
-			<mat-grid-tile>
-				<div class="count-box">
-					<mat-icon class="headerIcon" fontIcon="nf-fa-github"></mat-icon>
-					<div class="count-box-right">
-						<span class="counter">10+ Repos</span>
-						<p class="counter-desc"><strong>Available on <a
-									href="https://github.com/rhit-westeraj">Github</a></strong>
-						</p>
-					</div>
-				</div>
-			</mat-grid-tile>
-
-			<mat-grid-tile>
-				<div class="count-box">
-					<mat-icon class="headerIcon" fontIcon="nf-fa-heart"></mat-icon>
-					<div class="count-box-right">
-						<span class="counter">1000+ hrs</span>
-						<p class="counter-desc">Effort, Dedication, and Learning</p>
+						<span class="counter">{{item.stat}}</span>
+						<p class="counter-desc">{{item.statDescription}}</p>
 					</div>
 				</div>
 			</mat-grid-tile>
@@ -39,135 +16,71 @@
 <div class="resume-content">
 	<h1>Skills</h1>
 	<mat-accordion>
-		<!--Panel 1-->
-		<mat-expansion-panel>
+		<mat-expansion-panel *ngFor="let item of skills">
 			<mat-expansion-panel-header>
-				<mat-panel-title>Computer Programming</mat-panel-title>
+				<mat-panel-title>{{item.categoryName}}</mat-panel-title>
 				<mat-panel-description></mat-panel-description>
 			</mat-expansion-panel-header>
 			<!--Panel Content-->
-			<ul>
-				<li>Advanced experience in industry-level languages, including C, C++, and Java
-				</li>
-				<li>Intermediate experience in SQL Databases and Queries, and the PostgreSQL
-					Engine</li>
-				<li>Intermediate understanding of Windows and Linux/UNIX kernels and
-					environments</li>
-				<li>Advanced skills in web design (HTML5, CSS3, JavaScript) and other web
-					platforms (WordPress, Angular, NodeJS)</li>
-				<li>Intermediate/Advanced understanding of low-level programming and processor
-					architecture</li>
+			<h3 class="panel-content-subheader" *ngIf="item.highSkill">Advanced Skills in:</h3>
+			<ul *ngFor="let skill of item.highSkill">
+				<li>{{skill}}</li>
 			</ul>
-		</mat-expansion-panel>
-
-		<!--Panel 2-->
-		<mat-expansion-panel>
-			<mat-expansion-panel-header>
-				<mat-panel-title>Computer Hardware/Repair</mat-panel-title>
-			</mat-expansion-panel-header>
-			<!--Panel Content-->
-			<ul>
-				<li>Advanced understanding of computer internals and hardware</li>
-				<li>Able to recover data, refurbish old hardware, and construct functional devices
-					with other hardware</li>
-				<li>Intermediate/Advanced expertise in IoT devices, Arduino, and Raspberry Pi</li>
-				<li>Basic understanding of electronic component form factors, functions, behavior,
-					and use cases</li>
+			<br>
+			<h3 class="panel-content-subheader" *ngIf="item.medSkill">Intermediate Skills in:</h3>
+			<ul *ngFor="let skill of item.medSkill">
+				<li>{{skill}}</li>
+			</ul>
+			<br>
+			<h3 class="panel-content-subheader" *ngIf="item.lowSkill">Beginner Skills in:</h3>
+			<ul *ngFor="let skill of item.lowSkill">
+				<li>{{skill}}</li>
 			</ul>
 		</mat-expansion-panel>
 	</mat-accordion>
 
 	<h1>Education</h1>
 	<mat-accordion>
-		<!--Panel 1-->
-		<mat-expansion-panel>
+		<mat-expansion-panel *ngFor="let item of education">
 			<mat-expansion-panel-header>
-				<mat-panel-title>Rose-Hulman Institute of Technology</mat-panel-title>
-				<mat-panel-description>Currently Enrolled: Graduating Spring 2024</mat-panel-description>
+				<mat-panel-title>{{item.name}}</mat-panel-title>
+				<mat-panel-description>{{item.graduationDate}}</mat-panel-description>
 			</mat-expansion-panel-header>
 			<!--Panel Content-->
+			<h3 class="panel-content-subheader">Field of Study:</h3>
 			<ul>
-				<li><strong>Field of Study: </strong>Software Engineering (Bachelor of Science), Engineering
-					Management (Masters)
-					<ul>
-						<li>Originally Studied Computer Engineering until Spring 2021</li>
-					</ul>
-				</li>
+				<li *ngFor="let degree of item.degree">{{degree}}</li>
+				<li *ngIf="item.degreeAddendum"> {{item.degreeAddendum}}</li>
 			</ul>
 			<br>
-			<h5>Relevant Coursework:</h5>
-			<ul>
-				<li>Computer Architecture I (CSSE232)</li>
-				<li>Intro to Embedded Systems (ECE230)</li>
-				<li>Data Structures and Algorithms (CSSE230)</li>
-				<li>Intro to Web Programming (CSSE280)</li>
-				<li>Intro to Object-Oriented Programming</li>
-			</ul>
-		</mat-expansion-panel>
+			<div *ngIf="item.gpa"><strong>Unweighted GPA: </strong>{{item.gpa.unweighted}}, <strong>Weighted GPA:
+				</strong> {{item.gpa.weighted}}</div>
+			<br>
+			<p><strong>Relevant Coursework: </strong>{{item.relCoursework.join(", ")}}</p>
+			<p *ngIf="item.propCoursework"><strong>Proposed Coursework: </strong>{{item.propCoursework.join(", ")}}</p>
 
-		<!--Panel 2-->
-		<mat-expansion-panel>
-			<mat-expansion-panel-header>
-				<mat-panel-title>Walt Whitman High School</mat-panel-title>
-				<mat-panel-description>Graduated - Class of 2019</mat-panel-description>
-			</mat-expansion-panel-header>
-			<!--Panel Content-->
-			<p>Unweighted GPA: 3.3, Weighted GPA: 4.0</p>
-			<h5>Relevant Coursework: </h5>
-			<ul>
-				<li>AP Computer Science - Score: 4</li>
-				<li>AP Calculus AB - Score: 5</li>
-				<li>PLTW Digital Electronics</li>
-				<li>PLTW Engineering Design and Development Capstone Course</li>
-			</ul>
 		</mat-expansion-panel>
 	</mat-accordion>
 
 	<h1>Professional Experience</h1>
 	<mat-accordion>
 		<!--Panel 1-->
-		<mat-expansion-panel>
+		<mat-expansion-panel *ngFor="let item of experience">
 			<mat-expansion-panel-header>
-				<mat-panel-title>Rizkly Inc.</mat-panel-title>
-				<mat-panel-description>Currently Employed: Software Development Intern</mat-panel-description>
+				<mat-panel-title>{{item.name}}</mat-panel-title>
+				<mat-panel-description>{{item.position}}</mat-panel-description>
 			</mat-expansion-panel-header>
 			<!--Panel Content-->
-			<div>Company Location: Bethesda, MD</div>
-			<div>Position: Software Development Intern</div>
-			<div>Employment Length: June 2020 - Current</div>
+			<p>Company Location: {{item.location}}</p>
+			<p>Employed from {{item.timeEmployed}}</p>
+			<p *ngIf="item.terminationReason">Reason for Termination: {{item.terminationReason}}</p>
 			<br>
+			<h3 class="panel-content-subheader">Responsibilities:</h3>
 			<ul>
-				<li>Helped plan and suggest new algorithms to deploy for client use</li>
-				<li>Wrote and optimized new algorithm code for database backends to implement
-					new features</li>
-				<li>Communicated with database/server administrators about integration of new
-					feature-sets</li>
-				<li>Documented work for company transparency to clients</li>
-				<li>Implemented a CRUD-like web service that communicates with a PostgreSQL
-					database</li>
-				<li>Created Algorithm Visualizations powered by Angular</li>
+				<li *ngFor="let responsibility of item.responsibilities">{{responsibility}}</li>
 			</ul>
 		</mat-expansion-panel>
 
-		<!--Panel 2-->
-		<mat-expansion-panel>
-			<mat-expansion-panel-header>
-				<mat-panel-title>Holton Arms Creative Summer</mat-panel-title>
-				<mat-panel-description>Previously Employed: Web Design Counselor</mat-panel-description>
-			</mat-expansion-panel-header>
-			<!--Panel Content-->
-			<ul>
-				<div>Company Location: Bethesda, MD</div>
-				<div>Position: Web Design Counselor</div>
-				<div>Employment Length: June 2019 - August 2019</div>
-				<br>
-				<li>Taught children ages 8-15 various principles of basic web design including
-					HTML5 and CSS3</li>
-				<li>Supervised and engaged children throughout camp day</li>
-				<li>Communicated with parents about child's experiences at camp</li>
-				<li>Aided with camp-related activities and duties</li>
-			</ul>
-		</mat-expansion-panel>
 	</mat-accordion>
 </div>
 
