404, REM sizing, and Breakpoint Service
-I apparently forgot to add content to the 404 page...
-Style dimensions are now in REM units to better adapt responsive layout
--This only applies to explicit pixel dimensions. Percentages are unchanged
-Moved Breakpoint detection logic to a service

--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -1,20 +1,19 @@
 h1 {
 	font-size: 3rem;
-	margin: 20px 20px 30px 20px;
-	padding-top: 30px;
-	padding-left: 20px;
+	margin: 1.25rem 1.25rem 1.875rem 1.25rem;
+	padding-top: 1.875rem;
+	padding-left: 1.25rem;
 }
 
 .about {
 	display: flex;
-	margin: 20px;
+	margin: 1.25rem;
 
 	div {
-		margin: 20px;
-		
+		margin: 1.25rem;
 	}
 
 	p {
-		text-indent: 45px;
+		text-indent: 2.8125rem;
 	}
 }
