--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -1,12 +1,12 @@
-mat-grid-list{
+mat-grid-list {
 	justify-items: center;
-	margin:20px;
+	margin: 1.25rem;
 }
 
-mat-tab-group{
-	margin:20px;
+mat-tab-group {
+	margin: 1.25rem;
 }
 
-.projectTable{
-	width:100%;
+.projectTable {
+	width: 100%;
 }
