--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -16,7 +16,7 @@
 	z-index: 2;
 
 	h1.headerName {
-		margin-left: 8px;
+		margin-left: 0.5rem;
 	}
 
 	.headerSpacer {
@@ -40,22 +40,22 @@
 		display: flex;
 		align-items: center;
 		justify-content: center;
-		width: 220px;
+		width: 14rem;
 	}
 
 	mat-sidenav {
-		width: 220px;
+		width: 14rem;
 	}
 
 	.routerContent {
-		margin-top: 60px;
+		margin-top: 3rem;
 	}
 }
 
 // Sidebar Profile Styles
 .profile {
 	h1 {
-		font-size: 24px;
+		font-size: 1.5rem;
 		margin: 0;
 		padding: 0;
 		font-weight: 500;
@@ -71,17 +71,17 @@
 	.social-links {
 		text-align: center;
 		a {
-			font-size: 18px;
+			font-size: 1.125rem;
 			display: inline-block;
 			background: #212431;
 			color: #fff;
 			line-height: 1.3;
-			padding: 4px;
-			margin-right: 4px;
+			padding: 0.25rem;
+			margin-right: 0.25rem;
 			border-radius: 100%;
 			text-align: center;
-			width: 24px;
-			height: 24px;
+			width: 1.5rem;
+			height: 1.5rem;
 			transition: 0.3s;
 			text-decoration: none;
 
@@ -95,10 +95,10 @@
 
 	img.pfp {
 		border-radius: 50%;
-		margin: 15px auto;
+		margin: 0.9375rem auto;
 		display: block;
-		width: 120px;
-		border: 8px solid #2c2f3f;
+		width: 7.5rem;
+		border: 0.5rem solid #2c2f3f;
 		transition: 0.3s;
 
 		&.pfp:hover {
