--- a/src/app/error404/error404.component.scss
+++ b/src/app/error404/error404.component.scss
@@ -3,3 +3,16 @@
 	padding: 5rem 0;
 	font-size: 3rem;
 }
+
+.subtext {
+	text-align: center;
+	padding: 5rem auto;
+	font-size: small;
+}
+
+.img404 {
+	height: 400px;
+	text-align: center;
+	align-self:center;
+	
+}
