--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -3,4 +3,6 @@
 		Reserved.</div>
 	<div class="footerTxt">Source code for this website is licensed under the MIT License</div>
 	<div class="footerTxt"></div>
+	<br>
+	<div class="footerTxt"><a routerLink="/err_404" routerLinkActive="true">super secret link :)</a></div>
 </div>
