--- a/src/app/error404/error404.component.html
+++ b/src/app/error404/error404.component.html
@@ -1,1 +1,9 @@
-<p>error404 works!</p>
+<h1 class="big"> Oops...</h1>
+<br>
+<p class="subtext">You seem to have navigated to a page that doesn't exist yet...</p>
+<p class="subtext">You can <a routerLink="/main">go back to the home page</a> or enjoy this funny meme I have:</p>
+<div class="img404">
+	<img class="img404" src="{{img_src}}">
+</div>
+
+<app-footer></app-footer>
