--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/icon?family=Material+Icons');
 @import url('./assets/nerd-fonts-generated.min.css');
 
-.profile h1 {
+/* .profile h1 {
 	font-size: 1.5rem;
 	margin: 0;
 	padding: 0;
@@ -36,7 +36,7 @@
 	background: #43a047;
 	color: #fff;
 	text-decoration: none;
-}
+} */
 .profile img.pfp {
 	border-radius: 50%;
 	margin: 0.9375rem auto;
