--- a/src/App.css
+++ b/src/App.css
@@ -51,3 +51,20 @@
 .profile mat-icon {
 	font-size: 1.25rem;
 }
+
+section.intro {
+	width: 100%;
+	height: 80vh;
+	background-image: url('./assets/img/hero.webp');
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
+}
+section.intro .padding-div {
+	padding: 3rem;
+}
+section.intro .hero-text {
+	padding: 0.3125rem 0.625rem;
+	font-size: 3rem;
+	background-color: #222;
+}
