--- a/src/App.css
+++ b/src/App.css
@@ -2,41 +2,24 @@
 @import url('https://fonts.googleapis.com/icon?family=Material+Icons');
 @import url('./assets/nerd-fonts-generated.min.css');
 
-/* .profile h1 {
-	font-size: 1.5rem;
-	margin: 0;
-	padding: 0;
-	font-weight: 500;
-	text-align-last: center;
-}
-.profile h1 a,
-.profile h1 a:hover {
-	color: #fff;
+.link {
 	text-decoration: none;
+	color: #fff;
 }
-.profile .social-links {
-	text-align: center;
-}
+
 .profile .social-links a {
-	font-size: 1.125rem;
 	display: inline-block;
 	background: #212431;
 	color: #fff;
-	line-height: 1.3;
-	padding: 0.25rem;
-	margin-right: 0.25rem;
-	border-radius: 100%;
-	text-align: center;
-	width: 1.5rem;
-	height: 1.5rem;
 	transition: 0.3s;
+	border-radius: 100%;
 	text-decoration: none;
 }
 .profile .social-links a:hover {
 	background: #43a047;
 	color: #fff;
 	text-decoration: none;
-} */
+}
 .profile img.pfp {
 	border-radius: 50%;
 	margin: 0.9375rem auto;
@@ -52,6 +35,10 @@
 	font-size: 1.25rem;
 }
 
+.sidenav {
+	background-color: #303030;
+}
+
 section.intro {
 	width: 100%;
 	height: 80vh;
@@ -61,8 +48,17 @@ section.intro {
 	background-position: center;
 }
 section.intro .padding-div {
-	padding: 3rem;
+	padding: 2rem;
 }
+@media (max-width: 768px) {
+	section.intro {
+		height: auto;
+	}
+	section.intro .padding-div {
+		padding: 1rem;
+	}
+}
+
 section.intro .hero-text {
 	padding: 0.3125rem 0.625rem;
 	font-size: 3rem;
