--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto');
+@import url("https://fonts.googleapis.com/css2?family=Roboto");
 
 .link {
 	text-decoration: none;
@@ -40,7 +40,7 @@
 section.intro {
 	width: 100%;
 	height: 80vh;
-	background-image: url('./assets/img/hero.webp');
+	background-image: url("./assets/img/hero.webp");
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center;
