Initial Homepage Revamp

--- a/src/Layout.css
+++ b/src/Layout.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto");
+/* @import url("https://fonts.googleapis.com/css2?family=Roboto");
 
 section.intro {
 	width: 100%;
@@ -28,4 +28,4 @@ section.intro .hero-text {
 
 .errorimg {
 	width: 400px;
-}
+} */
