Update shadcn components

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -54,7 +54,7 @@
 	--border: hsl(240 5.9% 90%);
 	--input: hsl(240 5.9% 90%);
 	--ring: hsl(142.1 76.2% 36.3%);
-	--radius: hsl(0.5rem);
+	--radius: 0.5rem;
 	--chart-1: hsl(12 76% 61%);
 	--chart-2: hsl(173 58% 39%);
 	--chart-3: hsl(197 37% 24%);
