--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -129,18 +129,18 @@
   --animate-accordion-up: accordion-up 1s ease-out;
 
   @keyframes accordion-down {
-		from {
+		0% {
 			height: 0;
 		},
-		to {
+		100% {
 			height: var(--radix-accordion-content-height)
 		}
 	}
 	@keyframes accordion-up {
-		from {
+		0% {
 			height: var(--radix-accordion-content-height)
 		},
-		to {
+		100% {
 			height: 0;
 		}
 	}
@@ -158,6 +158,9 @@
   }
   h1{
 	@apply text-2xl md:text-4xl lg:text-6xl;
+  }
+  .prose a{
+	@apply text-[var(--color-primary)]
   }
 }
 
