--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,8 @@
 ---
-import Primary from "@/layouts/primary.astro";
-
-
+import EducationAccordion from '@/components/EducationAccordion.tsx';
+import Primary from '@/layouts/Primary.astro';
 ---
 
 <Primary>
-
+	<EducationAccordion slot="main" client:idle/>
 </Primary>
