Fixing a bunch more things

--- a/src/components/MainNav.astro
+++ b/src/components/MainNav.astro
@@ -2,7 +2,7 @@
 import ThemeIcon from './ThemeIcon.astro';
 import {CircleUser, Home, Rss, ScrollText, SquareDashedBottomCode} from 'lucide-react';
 import {AstroNavMenu} from './AstroNavMenu';
-import "@/styles/global.css"
+import "@/styles/globals.css"
 
 const items = [
 	{
