--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,9 @@
 ---
-import EducationAccordion from '@/components/EducationAccordion.tsx';
+// import EducationAccordion from '@/components/EducationAccordion.tsx';
+import SocialSection from '@/components/SocialSection.astro';
 import Primary from '@/layouts/Primary.astro';
 ---
 
 <Primary>
-	<EducationAccordion slot="main" client:idle/>
+	<SocialSection />
 </Primary>
