--- a/src/components/SiteFooter.astro
+++ b/src/components/SiteFooter.astro
@@ -1,23 +1,24 @@
 ---
 // import Link from 'next/link';
-import {Card, CardContent} from '../../old/src/components/ui/card';
+import {Card, CardContent} from '@/components/ui/card';
+
+// biome-ignore lint/correctness/noUnusedVariables: <explanation>
+const cc_xmlns = {
+	'xmlns:cc': 'http://creativecommons.org/ns#',
+	'xmlns:dct': 'http://purl.org/dc/terms/',
+};
 ---
 
 <footer class='mx-auto mb-4 block'>
-	<Card class='flex'>
-		<CardContent class='mx-auto mt-4 flex text-wrap'>
-			<pre
-				class='text-wrap text-center'>
-                        Made by Alex &quot;FaceFTW&quot; Westerman &copy; 2021-{new Date().getFullYear()} All Rights
-                        Reserved. <br />
-                        Source code for this website is licensed under the MIT License <br />
-                        All projects mentioned are subject to their specific licenses and copyrights as designated by
-                        their owners
-                        <br /><br />
-                <a href='/funny' class='text-gray-500 text-sm decoration-muted'>
-                	super secret link
-				</a>
-		</pre>
+	<Card className='flex'>
+		<CardContent className='mx-auto mt-4 flex text-wrap'>
+<pre class='text-wrap text-center'>Made by Alex &quot;FaceFTW&quot; Westerman &copy; 2021-{new Date().getFullYear()} All Rights Reserved.
+Source code for this website is licensed under the MIT License
+<p class='prose prose-green dark:prose-invert inline text-wrap font-mono' {...cc_xmlns}><span property='dct:title' class='font-mono'>The content of the "ref_cycle" blog</span>&nbsp;is licensed under&nbsp;<a href='https://creativecommons.org/licenses/by-nc-sa/4.0' target='_blank' rel='license noopener noreferrer' class='inline-flex justify-center font-mono'>CC BY-NC-SA 4.0</a></p>
+All projects mentioned are subject to their specific licenses and copyrights as designated by their owners
+
+
+<a href='/funny' class='text-gray-500 text-sm decoration-muted font-mono'>super secret link</a></pre>
 		</CardContent>
 	</Card>
 </footer>
