--- a/src/layouts/Primary.astro
+++ b/src/layouts/Primary.astro
@@ -1,6 +1,6 @@
 ---
 import {cn} from '@/lib/utils';
-import '@/styles/global.css';
+import '@/styles/globals.css';
 import SiteFooter from '../components/SiteFooter.astro';
 import MainNav from '@/components/MainNav.astro';
 ---
