--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,6 +4,25 @@
 
 @custom-variant dark (&:is(.dark *));
 
+  /* latin-ext */
+  @font-face {
+      font-family: 'Rubik';
+      font-style: normal;
+      font-weight: 300 900;
+      font-display: swap;
+      src: url('/fonts/Rubik-VariableFont_wght.ttf') format('ttf');
+      unicode-range: U+0100-02BA, U+02BD-02C5, U+02C7-02CC, U+02CE-02D7, U+02DD-02FF, U+0304, U+0308, U+0329, U+1D00-1DBF, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20C0, U+2113, U+2C60-2C7F, U+A720-A7FF;
+  }
+  /* latin */
+  @font-face {
+      font-family: 'Rubik';
+      font-style: normal;
+      font-weight: 300 900;
+      font-display: swap;
+      src: url('/fonts/Rubik-VariableFont_wght.ttf') format('ttf');
+      unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  }
+
 :root {
   --background: hsl(0 0% 100%);
   --foreground: hsl(240 10% 3.9%);
@@ -97,6 +116,7 @@
   --color-sidebar-ring: var(--sidebar-ring);
   --animate-accordion-down: accordion-down 1s ease-out;
   --animate-accordion-up: accordion-up 1s ease-out;
+  --font-sans: 'Rubik', 'sans-serif';
 
   @keyframes accordion-down {
     0% {
@@ -152,10 +172,20 @@
   @apply w-fit;
 }
 
+
+  @utility rubik {
+  font-family: "Rubik", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
+  font-style: normal;
+  }
+
+
 @layer base {
   * {
     border-color: var(--color-gray-200, currentColor);
     @apply border-border;
+	@apply rubik
   }
   body {
     @apply bg-background text-foreground;
@@ -164,4 +194,3 @@
     @apply text-2xl md:text-4xl lg:text-6xl;
   }
 }
-
