--- a/src/layouts/Primary.astro
+++ b/src/layouts/Primary.astro
@@ -16,7 +16,7 @@ import MainNav from '@/components/MainNav.astro';
 			</header>
 
 			<main class='container mx-auto flex flex-col md:w-[80%]'>
-				<div class='container mx-auto px-5'><slot name='main' /></div>
+				<div class='container mx-auto px-5'><slot/></div>
 				<div class='flex items-center'>
 					<SiteFooter />
 				</div>
