--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,9 @@
 ---
 // import EducationAccordion from '@/components/EducationAccordion.tsx';
-import SocialSection from '@/components/SocialSection.astro';
+import SocialSection from '@/components/SocialSection.tsx';
 import Primary from '@/layouts/Primary.astro';
 ---
 
 <Primary>
-	<SocialSection />
+	<SocialSection client:load />
 </Primary>
