Semi-functional tooltips (pain)

--- a/src/layouts/Primary.astro
+++ b/src/layouts/Primary.astro
@@ -4,10 +4,12 @@ import '@/styles/globals.css';
 import SiteFooter from '../components/SiteFooter.astro';
 import MainNav from '@/components/MainNav.astro';
 import {Tooltips} from 'astro-tooltips'
+// biome-ignore lint/correctness/noUnusedVariables: <explanation>
 interface Props {
 	title?: string;
 }
 
+// biome-ignore lint/correctness/noUnusedVariables: <explanation>
 const {title} = Astro.props;
 ---
 
