More work on the frontpage

--- a/src/components/SocialSection.astro
+++ b/src/components/SocialSection.astro
@@ -3,66 +3,35 @@ import {Mail} from '@lucide/astro';
 import {Twitter, Linkedin, Github, Bluesky} from './ExtraIcons';
 import {Button} from './ui/button';
 
-const iconSizeClass = 'h-10 w-10 md:h-10 md:w-10';
+const iconSizeClass = 'size-10';
 const buttonClass =
-	" m-0 p-0 text-primary underline-offset-4 hover:underline size-10 sm:h-10 sm:w-10 inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive";
-const toolTipClass = 'w-max absolute top-0 left-0 bg-primary p-[5px] border-4 bold';
+	" m-0 p-0 size-10 text-primary underline-offset-4 hover:underline inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive";
+const toolTipClass =
+	'transition-opacity w-max absolute top-0 left-0 bg-primary px-4 py-2 rounded-md bold text-[80%] text-primary-foreground';
 ---
 
 <div class='flex flex-row items-center gap-8'>
 	<div class='mx-auto'></div>
 	<button class={buttonClass} id='twitter_btn' aria-describedby='twitter_tooltip'>
-		<Twitter className={iconSizeClass} size=40 />
+		<Twitter className={iconSizeClass} size='64' />
 	</button>
 	<div class={toolTipClass} id='twitter_tooltip' role='tooltip'>Twitter</div>
-	<!-- <Button
-		client:visible
-		variant='link'
-		className={iconSizeClass}
-		id='bsky_btn'
-		aria-describedby='bsky_tooltip'
-		size='icon'
-		asChild
-		onClick={() => window.open('https://bsky.app/profile/faceftw.dev')}>
-		<Bluesky className={iconSizeClass} />
-	</Button>
+	<button class={buttonClass} id='bsky_btn' aria-describedby='bsky_tooltip'>
+		<Bluesky className={iconSizeClass} size='64' />
+	</button>
 	<div class={toolTipClass} id='bsky_tooltip' role='tooltip'>Bluesky</div>
-	<Button
-		client:visible
-		variant='link'
-		className={iconSizeClass}
-		id='github_btn'
-		aria-describedby='github_tooltip'
-		size='icon'
-		asChild
-		onClick={() => window.open('https://github.com/FaceFTW')}>
-		<Github className={iconSizeClass} />
-	</Button>
-	<div class={toolTipClass} id='github_tooltip' role='tooltip'>Github</div>
-	<Button
-		client:visible
-		variant='link'
-		className={iconSizeClass}
-		id='mailto_btn'
-		aria-describedby='mailto_tooltip'
-		size='icon'
-		asChild
-		onClick={() => window.open('mailto:alex@faceftw.dev')}>
-		<Mail className={iconSizeClass} />
-	</Button>
-	<div class={toolTipClass} id='mailto_tooltip' role='tooltip'></div>
-	<Button
-		client:visible
-		variant='link'
-		className={iconSizeClass}
-		id='linkedin_btn'
-		aria-describedby='linkedin_tooltip'
-		size='icon'
-		asChild
-		onClick={() => window.open('https://www.linkedin.com/in/faceftw')}>
-		<Linkedin className={iconSizeClass} />
-	</Button>
-	<div class={toolTipClass} id='linkedin_tooltip' role='tooltip'>Linkedin</div> -->
+	<button class={buttonClass} id='github_btn' aria-describedby='github_tooltip'>
+		<Github className={iconSizeClass} size='64' />
+	</button>
+	<div class={toolTipClass} id='github_tooltip' role='tooltip'>GitHub</div>
+	<button class={buttonClass} id='mailto_btn' aria-describedby='mailto_tooltip'>
+		<Mail class={iconSizeClass} size='64' />
+	</button>
+	<div class={toolTipClass} id='mailto_tooltip' role='tooltip'>Mail</div>
+	<button class={buttonClass} id='linkedin_btn' aria-describedby='linkedin_tooltip'>
+		<Linkedin className={iconSizeClass} size='64' />
+	</button>
+	<div class={toolTipClass} id='linkedin_tooltip' role='tooltip'>Linkedin</div>
 	<div class='mx-auto'></div>
 </div>
 
@@ -72,11 +41,12 @@ const toolTipClass = 'w-max absolute top-0 left-0 bg-primary p-[5px] border-4 bo
 		computePosition,
 		flip,
 		shift,
+		type ReferenceElement,
 		// type ReferenceElement,
 		// type FloatingElement,
 	} from '@floating-ui/dom';
 
-	function update(btn, tt) {
+	function update(btn: ReferenceElement, tt: HTMLElement) {
 		computePosition(btn, tt, {
 			placement: 'bottom',
 			middleware: [flip(), shift({padding: 5})],
@@ -88,27 +58,36 @@ const toolTipClass = 'w-max absolute top-0 left-0 bg-primary p-[5px] border-4 bo
 		});
 	}
 
-	function showTooltip(btn, tt) {
-		tt.style.display = 'block';
-		update(btn, tt);
+	function showTooltip(btn: Element | null, tt: Element | null) {
+		// tt.style.display = 'block';
+		tt!.style.opacity = '100%';
+		update(btn!, tt!);
 	}
 
-	function hideTooltip(tt) {
-		tt.style.display = 'none';
+	function hideTooltip(tt: Element | null) {
+		// tt.style.display = 'none';
+		tt.style.opacity = '0%';
 	}
 
 	const twtBtn = document.querySelector('#twitter_btn');
 	const twtTt = document.querySelector('#twitter_tooltip');
-	twtBtn.addEventListener('click', () => window.open('https://twitter.com/_FaceFTW'));
+	twtBtn?.addEventListener('click', () => window.open('https://twitter.com/_FaceFTW'));
 
 	const bskyBtn = document.querySelector('#bsky_btn');
 	const bskyTt = document.querySelector('#bsky_tooltip');
+	bskyBtn?.addEventListener('click', () => window.open('https://bsky.app/profile/faceftw.dev'));
+
 	const ghBtn = document.querySelector('#github_btn');
 	const ghTt = document.querySelector('#github_tooltip');
+	ghBtn?.addEventListener('click', () => window.open('https://github.com/FaceFTW'));
+
 	const mBtn = document.querySelector('#mailto_btn');
 	const mTt = document.querySelector('#mailto_tooltip');
+	mBtn?.addEventListener('click', () => window.open('https://bsky.app/profile/faceftw.dev'));
+
 	const liBtn = document.querySelector('#linkedin_btn');
 	const liTt = document.querySelector('#linkedin_tooltip');
+	liBtn?.addEventListener('click', () => window.open('https://www.linkedin.com/in/faceftw'));
 
 	//This is some of the worst typescript stuff I've violated probably
 	let arr = [
