--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,11 +5,11 @@
 @custom-variant dark (&:is(.dark *));
 
 @font-face {
-    font-family: 'Rubik';
+    font-family: "Rubik";
     font-style: normal;
     font-weight: 300 900;
     font-display: swap;
-    src: url('/fonts/Rubik-VariableFont_wght.ttf') format('ttf');
+    src: url("/fonts/Rubik-VariableFont_wght.ttf") format("truetype");
 }
 
 :root {
@@ -105,14 +105,16 @@
   --color-sidebar-ring: var(--sidebar-ring);
   --animate-accordion-down: accordion-down 1s ease-out;
   --animate-accordion-up: accordion-up 1s ease-out;
+  --animate-fade: fade 1s ease-in-out;
   --font-sans: 'Rubik', 'sans-serif';
+  --font-display: 'Rubik', "sans-serif";
 
   @keyframes accordion-down {
     0% {
       height: 0;
     }
     100% {
-    height: var(--radix-accordion-content-height)
+      height: var(--radix-accordion-content-height)
     }
   }
   @keyframes accordion-up {
@@ -122,6 +124,14 @@
     100% {
       height: 0;
     }
+  }
+  @keyframes fade {
+	0% {
+		opacity: 0%;
+	}
+	100% {
+		opacity: 100%;
+	}
   }
 }
 
